v1.0.11.0 - unreleased
======================
 NEW    : Command Line Option "/dubdelay" applies a positive or negative audio delay of ???ms, if filename contains "DELAY ???ms" (internal Audio Switcher required)
 CHANGED: File format association. MPC is now recognize as a registered application by Vista, and compatible with UAC.
 FIXED  : Subtitle popup menu not working in French

v1.0.10.0 - 15.Sep 2007
======================
 CHANGED: Latest Clsid Patches (Bento4 0.9.3, faad2 2.6b, dtsdec 0.0.2, libmad 0.15.1b, zlib 1.2.3, mpeg decoder: progressive frames fix, mpeg decoder: dsutil interlaced fix v2)
 CHANGED: libpng 1.2.20
 NEW    : Command Line Option "/d3dfs" to start MPC in D3D fullscreen mode
 NEW    : Logitech LCD support (e.g., G15 keyboard)
 CHANGED: Remember File and DVD position works only when "Keep history" is active (preserve privacy issue)
 CHANGED: Kick off Screen Saver from Power Options only while video is playing (Vista)
 NEW    : Build for x64 platforms
 NEW    : Multilingual support for english, french and german.
 CHANGED: DirectX SDK updated to August 2007 (v35)
 FIXED  : Wrong Aspect Ratio with EVR-Custom (definitely i hope :-)
 FIXED  : Internal Mpeg2 Decoder was not working with EVR and EVR-Custom
 FIXED  : Audio async problems with Blu-Ray/HD DVD DTS files [wrong AvgTimePerFrame calculation for DTS and AC3 (madshi)]
 FIXED  : OSD was not working when D3DX9_... dll was not present (random pixels shown in top of video)
 FIXED  : Mouse now working in DVD menu with EVR-Custom (Vista)
 FIXED  : FLV Splitter when video does not start with keyframe
 FIXED  : Vulnerability CAL-20070912-1 in AVI Source Filter (arbitrary code execute with users privileges)
 FIXED  : Vulnerability in FLI internal source filter

v1.0.9.0 - 14.Jul 2007
======================
 CHANGED: OSD improved for EVR-Custom
 FIXED  : EVR-Custom rendering thread stability
 FIXED  : EVR-Custom does not need mfplat.dll anymore (dll is installed with WMP11)