@@ -87,6 +87,7 @@ BOOL CSaveDlg::OnInitDialog()
 	CStringW fnw = m_in;
 	CComPtr<IFileSourceFilter> pReader;
 
+#ifndef NO_BUILDIN_FILTERS
 	if(!pReader && m_in.Mid(m_in.ReverseFind('.')+1).MakeLower() == _T("cda"))
 	{
 		hr = S_OK;
@@ -116,6 +117,7 @@ BOOL CSaveDlg::OnInitDialog()
 			CopyFile(m_in, pout, FALSE);
 		}
 	}
+#endif	// NO_BUILDIN_FILTERS
 
 	if(!pReader)
 	{
